--- a/customerapp/customerapp.gradle
+++ b/customerapp/customerapp.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.bokoup.customerapp"
-        minSdk 21
+        minSdk 24
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -55,10 +55,12 @@ dependencies {
     debugImplementation libs.bundles.debug
     implementation libs.accompanist.placeholder
     implementation libs.androidx.activity
+    implementation libs.androidx.biometrics
     implementation libs.androidx.core
     implementation libs.androidx.lifecycle
     implementation libs.androidx.lifecycle.viewmodel
     implementation libs.androidx.navigation
+    implementation libs.androidx.security
     implementation libs.apollo.runtime
     implementation libs.bundles.camerax
     implementation libs.bundles.compose
