--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,5 @@ kapt.incremental.apt=true
 
 kapt.include.compile.classpath=false
 org.gradle.warning.mode=all
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
