--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,43 +1,44 @@
 [versions]
-accompanist = "0.26.4-beta"
-apollo = "3.6.2"
-camerax = "1.2.0-beta02"
-coil = "2.2.1"
-compose = "1.3.0-beta03"
-compose-compiler = "1.3.1"
-coroutines = "1.6.0"
-gradle = '7.5.1'
-hilt-dagger = "2.44"
+accompanist = "0.30.0"
+apollo = "3.7.5"
+camerax = "1.2.2"
+coil = "2.3.0"
+compose = "1.4.0"
+compose-compiler = "1.4.4"
+coroutines = "1.6.4"
+gradle = "8.1.0-alpha10"
+hilt-dagger = "2.45"
 hilt_navigation_compose = "1.0.0"
-kotlin = "1.7.10"
+kotlin = "1.8.10"
 ksol = "1.1.1"
-navigation = "2.5.2"
+material3 = "1.1.0-beta01"
+navigation = "2.5.3"
 retrofit = "2.9.0"
-room = "2.4.3"
-viewmodel = "2.5.1"
+room = "2.5.1"
+viewmodel = "2.6.1"
 
 [libraries]
 accompanist-placeholder = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanist" }
-android-gradle = 'com.android.tools.build:gradle:7.3.0'
+android-gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
 android-junit = "junit:junit:4.13.2"
-androidx-activity = "androidx.activity:activity-compose:1.6.0"
-androidx-compose-material = "androidx.compose.material:material:1.3.0-beta03"
-androidx-compose-material3 = "androidx.compose.material3:material3:1.0.0-beta03"
-androidx-compose-material3-window = "androidx.compose.material3:material3-window-size-class:1.0.0-beta03"
+androidx-activity = "androidx.activity:activity-compose:1.7.0"
+androidx-compose-material = "androidx.compose.material:material:1.4.0"
+androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
+androidx-compose-material3-window = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3" }
 androidx-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 androidx-compose-ui-test = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
 androidx-compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
 androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 androidx-core = "androidx.core:core-ktx:1.9.0"
-androidx-lifecycle = "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+androidx-lifecycle-base = "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
 androidx-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "viewmodel" }
 androidx-navigation = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
 androidx-room = { module = "androidx.room:room-runtime", version.ref = "room" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-ktk = { module = "androidx.room:room-ktx", version.ref = "room" }
-androidx-test-espresso = "androidx.test.espresso:espresso-core:3.4.0"
-androidx-test-ext = "androidx.test.ext:junit:1.1.3"
+androidx-test-espresso = "androidx.test.espresso:espresso-core:3.5.1"
+androidx-test-ext = "androidx.test.ext:junit:1.1.5"
 apollo-kotlin-gradle = { module = "com.apollographql.apollo3:apollo-gradle-plugin", version.ref = "apollo" }
 apollo-runtime = { module = "com.apollographql.apollo3:apollo-runtime", version.ref = "apollo" }
 bitcoinj = "org.bitcoinj:bitcoinj-core:0.15.10"
@@ -45,11 +46,11 @@ camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cam
 camera-core = { module = "androidx.camera:camera-core", version.ref = "camerax" }
 camera-extensions = { module = "androidx.camera:camera-extensions", version.ref = "camerax" }
 camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "camerax" }
-camera-mlkit = { module = "androidx.camera:camera-mlkit-vision", version.ref = "camerax" }
+camera-mlkit = "androidx.camera:camera-mlkit-vision:1.3.0-alpha05"
 camera-video = { module = "androidx.camera:camera-video", version.ref = "camerax" }
 camera-view = { module = "androidx.camera:camera-view", version.ref = "camerax" }
-clover = "com.clover.sdk:clover-android-sdk:248.4"
-clover-cfp = "com.clover.cfp:clover-cfp-sdk:4.2.1"
+clover-base = "com.clover.sdk:clover-android-sdk:293"
+clover-cfp = "com.clover.cfp:clover-cfp-sdk:4.3.0"
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coil" }
@@ -57,7 +58,7 @@ dagger-hilt-android = { module = "com.google.dagger:hilt-android", version.ref =
 dagger-hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt-dagger" }
 dagger-hilt-gradle = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt-dagger" }
 datastore = "androidx.datastore:datastore-preferences:1.0.0"
-google-material = "com.google.android.material:material:1.6.1"
+google-material = "com.google.android.material:material:1.8.0"
 google_fonts = { module = "androidx.compose.ui:ui-text-google-fonts", version.ref = "compose" }
 gradle-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt_navigation_compose" }
@@ -70,15 +71,15 @@ ksol-keygen = { module = "io.github.dlgrech:ksol-keygen", version.ref = "ksol" }
 ksol-rpc = { module = "io.github.dlgrech:ksol-rpc", version.ref = "ksol" }
 ksol-solpay = { module = "io.github.dlgrech:ksol-solpay", version.ref = "ksol" }
 material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
-mlkit = "com.google.mlkit:barcode-scanning:17.0.2"
+mlkit = "com.google.mlkit:barcode-scanning:17.1.0"
 okhttp = "com.squareup.okhttp3:okhttp:4.10.0"
 okhttp-logging = "com.squareup.okhttp3:logging-interceptor:4.10.0"
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-converter = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 shimmer-android = "com.facebook.shimmer:shimmer:0.5.0"
-zxing = "com.google.zxing:core:3.5.0"
-roboelectric = "org.robolectric:robolectric:4.8"
-androidx-biometrics = "androidx.biometric:biometric:1.2.0-alpha04"
+zxing = "com.google.zxing:core:3.5.1"
+roboelectric = "org.robolectric:robolectric:4.9.2"
+androidx-biometrics = "androidx.biometric:biometric:1.2.0-alpha05"
 androidx-security = "androidx.security:security-crypto:1.0.0"
 
 #lottie = "com.airbnb.android:lottie:5.2.0"
